View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0028886 | Community | OCCT:Modeling Algorithms | public | 2017-07-03 16:59 | 2018-06-29 21:19 |
Reporter | SeMiR | Assigned To | |||
Priority | normal | Severity | block | ||
Status | closed | Resolution | fixed | ||
Platform | Windows | OS | VC++ 2015 | ||
Product Version | 7.1.0 | ||||
Target Version | 7.3.0 | Fixed in Version | 7.3.0 | ||
Summary | 0028886: infinite loop at intersecting two faces / surfaces | ||||
Description | While using IntTools_FaceFace to calculate the intersecting curve of two faces, we found out, that the program stays forever in the do-while-loop of method void IntWalk_PWalking::Perform(const TColStd_Array1OfReal& ParDep, const Standard_Real u1min, const Standard_Real v1min, ... ) The situation can also be reproduced by using Draw and the intersect-command for two surfaces, which will then hang in the same loop. The attached file contains the affected two faces. | ||||
Steps To Reproduce | pload ALL restore Faces_InfiniteLoop.brep myFaces explode myFaces f mksurface mySurface_1 myFaces_1 mksurface mySurface_2 myFaces_2 intersect myCurve mySurface_1 mySurface_2 | ||||
Tags | No tags attached. | ||||
Test case number | perf modalg bug28886 | ||||
|
Faces_InfiniteLoop.brep (4,133,781 bytes) |
|
Branch CR28886 has been created by nbv. SHA-1: 8cdb1fa2fc87458b648178e8c5173a0997e52d78 Detailed log of new commits: Author: nbv Date: Mon Dec 11 17:04:01 2017 +0300 0028886: infinite loop at intersecting two faces / surfaces Algorithm of step re-computation has been amended. |
|
Branch CR28886 has been updated forcibly by nbv. SHA-1: 1ced3dbb9521faae89ecbacd3c5a64ab30bb840e |
|
Branch CR28886 has been updated forcibly by nbv. SHA-1: c7f91872bff889469c1862d3a7f604fc180f6e07 |
|
Branch CR28886 has been updated forcibly by nbv. SHA-1: 5de799520721241f8c09a8db601df209b57a00ec |
|
Branch CR28886 has been updated forcibly by nbv. SHA-1: fd04b5da07fc7b0b1c73ad9fb25129d1d9034375 |
|
Dear Mikhail, Please review branch CR28886. Test results are here: http://jenkins-test-10.nnov.opencascade.com:8080/view/CR28886-master_NBV/view/COMPARE/ |
|
src/IntWalk/IntWalk_PWalking.cxx - 1281: it's cycle invariant. Please avoid for-loop, make flat assigning if the condition is true. tests/perf/modalg/bug28886 - 9: is 20 s enough for every (even debug mode on a slow PC) platform? - 21: how many curves are in the result? Is this number stable? May be it is worth to compute the curvilinear length of the result? |
|
Branch CR28886 has been updated forcibly by nbv. SHA-1: ee2382a62f94fea4d73c7c58fe87086fdde0fd4a |
|
Branch CR28886 has been updated forcibly by nbv. SHA-1: 03a3ba9ebe3613569fc7fe1432ff9029bad3d129 |
|
Done! Please review CR28886 branch again. Test results are here: http://jenkins-test-10.nnov.opencascade.com/view/CR28886-master_NBV/ |
|
Reviewed. |
|
Combination - OCCT branch : CR28886 SHA - ee2382a62f94fea4d73c7c58fe87086fdde0fd4a Products branch : master SHA - a8f3ddb817485da4a83285b039a03044dfa7f6c0 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences Test cases: perf modalg bug28886 - OK CPU differences: Debian70-64: OCCT Total CPU difference: 18354.089999999578 / 18606.899999999736 [-1.36%] Products Total CPU difference: 7472.239999999998 / 7496.790000000002 [-0.33%] Windows-64-VC10: OCCT Total CPU difference: 17717.485972898587 / 17649.12633469849 [+0.39%] Products Total CPU difference: 8005.3161157999775 / 8001.213289499973 [+0.05%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR28886 has been deleted by kgv. SHA-1: 03a3ba9ebe3613569fc7fe1432ff9029bad3d129 |
occt: master 03a3ba9e 2017-12-11 14:04:01
|
0028886: infinite loop at intersecting two faces / surfaces The reason of constantly increasing/decreasing steps has been eliminated for the problem case. |
Affected Issues 0028886 |
|
mod - src/IntWalk/IntWalk_PWalking.cxx | Diff File | ||
add - tests/perf/modalg/bug28886 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2017-07-03 16:59 | SeMiR | New Issue | |
2017-07-03 16:59 | SeMiR | Assigned To | => msv |
2017-07-03 16:59 | SeMiR | File Added: Faces_InfiniteLoop.brep | |
2017-12-07 15:14 | msv | Assigned To | msv => nbv |
2017-12-07 15:14 | msv | Status | new => assigned |
2017-12-07 15:15 | msv | Target Version | => 7.4.0 |
2018-01-29 14:02 | git | Note Added: 0073654 | |
2018-02-01 18:43 | git | Note Added: 0073715 | |
2018-02-02 10:32 | git | Note Added: 0073717 | |
2018-02-02 13:48 | git | Note Added: 0073729 | |
2018-02-05 09:38 | git | Note Added: 0073747 | |
2018-02-05 12:51 |
|
Note Added: 0073803 | |
2018-02-05 12:51 |
|
Assigned To | nbv => msv |
2018-02-05 12:51 |
|
Status | assigned => resolved |
2018-02-05 18:10 | msv | Note Added: 0073826 | |
2018-02-05 18:10 | msv | Assigned To | msv => nbv |
2018-02-05 18:10 | msv | Status | resolved => assigned |
2018-02-06 09:53 | git | Note Added: 0073837 | |
2018-02-06 10:50 | git | Note Added: 0073838 | |
2018-02-06 11:25 |
|
Note Added: 0073840 | |
2018-02-06 11:25 |
|
Assigned To | nbv => msv |
2018-02-06 11:25 |
|
Status | assigned => resolved |
2018-02-06 12:17 | msv | Note Added: 0073846 | |
2018-02-06 12:17 | msv | Assigned To | msv => bugmaster |
2018-02-06 12:17 | msv | Status | resolved => reviewed |
2018-02-06 12:24 | apn | Test case number | => perf modalg bug28886 |
2018-02-06 12:24 | apn | Note Added: 0073847 | |
2018-02-06 12:24 | apn | Status | reviewed => tested |
2018-02-10 17:14 |
|
Changeset attached | => occt master 03a3ba9e |
2018-02-10 17:14 |
|
Assigned To | bugmaster => nbv |
2018-02-10 17:14 |
|
Status | tested => verified |
2018-02-10 17:14 |
|
Resolution | open => fixed |
2018-02-11 09:55 | git | Note Added: 0073912 | |
2018-02-20 12:58 |
|
Target Version | 7.4.0 => 7.3.0 |
2018-06-29 21:15 |
|
Fixed in Version | => 7.3.0 |
2018-06-29 21:19 |
|
Status | verified => closed |