0028886: infinite loop at intersecting two faces / surfaces

The reason of constantly increasing/decreasing steps has been eliminated for the problem case.